# habitflow

./: .editorconfig  .gitattributes  .gitignore  .pre-commit-config.yaml  BUGFIX_SUMMARY.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  PROJECT_STATUS.md  README.md  SECURITY.md  docker-compose.prod.yml  docker-compose.yml  setup_project.sh  start_project.sh
.github/: CODEOWNERS  SUPPORT.md  dependabot.yml  pull_request_template.md  release-drafter.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: backend.yml  frontend.yml  full-stack.yml  release.yml  security.yml
backend/: .env.example  .gitignore  README_SETUP.md  build.sh  manage.py  manage_db.sh  pyproject.toml  requirements.txt  run_backend.sh  run_local_sqlite.sh  run_with_docker_db.sh  setup_backend.sh
backend/api/: __init__.py  index.py
backend/core/: __init__.py  asgi.py  urls.py  wsgi.py
backend/core/api/: exceptions.py
backend/core/api/v1/: auth_urls.py  root_views.py  urls.py
backend/core/middleware/: __init__.py
backend/core/settings/: __init__.py  base.py  docker.py  local.py  production.py
backend/core/utils/: __init__.py
backend/forest/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
backend/forest/management/commands/: create_forest_achievements.py
backend/forest/migrations/: 0001_initial.py
backend/habitflow/: asgi.py  settings.py  urls.py  wsgi.py
backend/habits/: admin.py  models.py  serializers.py  services.py  urls.py  views.py
backend/habits/migrations/: 0001_initial.py  0002_habitstack_habit_icon_habit_is_micro_habit_and_more.py  0003_badge_challenge_feeditem_comment_habitcontract_and_more.py  0004_add_bookmark_and_feed_indexes.py  0005_alter_bookmark_unique_together_and_more.py
backend/tests/: conftest.py  test_habits.py
backend/users/: admin.py  models.py  serializers.py  signals.py  urls.py  views.py
backend/users/migrations/: 0001_initial.py  0002_userprofile_alter_user_options_user_avatar_and_more.py  0003_userprofile_identity_userprofile_identity_progress_and_more.py
docs/: API_USAGE.md  DEPLOYMENT.md
frontend/: .env.example  .gitignore  README_SETUP.md  build_frontend.sh  package-lock.json  package.json  run_frontend_dev.sh  serve_frontend_prod.sh  setup_frontend.sh
frontend/public/: index.html  manifest.json
frontend/src/: App.js
frontend/src/components/: AnalyticsChart.js  BadgeCard.js  BadgeShowcase.js  ChallengeCard.js  CommunityAchievements.js  CommunityNotifications.js  EnhancedInteractiveEffects.js  EnhancedSocialFeedItem.js  HabitCard.js  HabitForm.js  HabitList.js  HabitStackBuilder.js  IdentityTracker.js  InteractiveLandingForest.js  PlantGrowth.js  ProgressRing.js  SocialFeedItem.js  StatCard.js  StreakFlame.js  ThemeSelector.js  TreeGrowth.js
frontend/src/contexts/: AuthContext.js  (+2 more)
infrastructure/docker/: Dockerfile.backend  Dockerfile.dev  Dockerfile.frontend
nginx/: nginx.conf.example
scripts/: cleanup_repo.sh
(+76 files in other folders)
